--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,10 @@ Pillow
 cython
 matplotlib
 scikit-image
-tensorflow>=1.3.0
-keras>=2.0.8
+tensorflow==1.14.0
+keras==2.0.8
 opencv-python
-h5py
+h5py==2.10.0
 imgaug
 IPython[all]
+pycocotools
